fixed card spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,7 @@ html  {
 }
 /* City-cards*/
 #card-spacer {
+   padding-left: 8%;
     margin-bottom:100px;
 }
 
